--- a/css/styles.css
+++ b/css/styles.css
@@ -267,6 +267,12 @@ ul, li {
     @media (max-width: 1280px) {
       .form__button {
         padding: 0.69rem 1.9rem; } }
+    @media (max-width: 768px) {
+      .form__button {
+        padding: 0.69rem 4.2rem; } }
+    @media (max-width: 576px) {
+      .form__button {
+        padding: 0.69rem 1.9rem; } }
     .form__button--google {
       background-color: white;
       border: 1px solid #C8D6E5; }
@@ -348,7 +354,11 @@ ul, li {
     color: #576574;
     font-size: 1rem;
     letter-spacing: 0;
-    line-height: 1.5rem; }
+    line-height: 1.5rem;
+    margin: 0; }
+    @media (max-width: 768px) {
+      .form__description3 {
+        margin-bottom: 3rem; } }
   .form__hightlight-1 {
     color: #3345D7;
     cursor: pointer; }
