--- a/scss/components/_variables.scss
+++ b/scss/components/_variables.scss
@@ -1,8 +1,15 @@
 //font weight
 $SemiBold: 600;
+$medium: 500;
 //colors
 $color-one: #F9B76B;
 $color-two: #00000099;
 $color-three: #8395A7;
 $color-four: #354BD4;
 $error: #EE5253;
+$color-five: #222F3E;
+$color-six: #6C5DD3;
+$color-seven: #F4F5F7;
+$color-eight: #292930;
+$color-nine: #C8D6E5;
+$color-ten: #AEDDEB;
