--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -4,3 +4,5 @@
 @import "./components/general";
 //section home
 @import "./components/home";
+//section dashboard
+@import "./components/dashboard";
