--- a/scss/components/_home.scss
+++ b/scss/components/_home.scss
@@ -226,7 +226,7 @@
   }
   &__input-password{
     padding: rem(16) 0;
-    padding-left: rem(16.5);
+    padding-left: 1.2rem;
     font-size: rem(14);
     color: $color-two;
     border-radius: rem(4);
