--- a/scss/components/_variables.scss
+++ b/scss/components/_variables.scss
@@ -13,3 +13,5 @@ $color-seven: #F4F5F7;
 $color-eight: #292930;
 $color-nine: #C8D6E5;
 $color-ten: #AEDDEB;
+$color-eleven: #707070;
+$color-twelve: #2E86DE;
