--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -2,7 +2,7 @@
 @import "./components/variables";
 //general
 @import "./components/general";
-//section home
-@import "./components/home";
+//section login
+@import "./components/login";
 //section dashboard
-@import "./components/dashboard";
+@import "./components/home";
